-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u131, 9
-
Component/s: hotspot
-
b172
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8181541 | 10 | Tobias Hartmann | P2 | Resolved | Fixed | b11 |
| JDK-8181257 | 9.0.4 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8183678 | 8u161 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8181040 | 8u152 | Tobias Hartmann | P2 | Closed | Fixed | b05 |
| JDK-8192239 | emb-8u161 | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
3 Null pointer dereference defect groups in null:0
- backported by
-
JDK-8181257 Null pointer dereference of CodeCache::find_blob() result
-
- Resolved
-
-
JDK-8181541 Null pointer dereference of CodeCache::find_blob() result
-
- Resolved
-
-
JDK-8183678 Null pointer dereference of CodeCache::find_blob() result
-
- Resolved
-
-
JDK-8192239 Null pointer dereference of CodeCache::find_blob() result
-
- Resolved
-
-
JDK-8181040 Null pointer dereference of CodeCache::find_blob() result
-
- Closed
-