8180813: Null pointer dereference of CodeCache::find_blob() result

Fixed missing null checks on the result of CodeCache::find_blob() found by Parfait.

Reviewed-by: shade, kvn